Install daisyui and test daisyui & tailwind functionality

--- a/website/templates/alt-index.html
+++ b/website/templates/alt-index.html
@@ -1,4 +1,4 @@
-<div hx-target="this" hx-swap="outerHTML">
-    <h2>htmx works!</h2>
-    <button hx-get="{% url 'index' %}">OK</button>
+<div class="space-x-1 space-y-1" hx-target="this" hx-swap="outerHTML">
+    <h2 class="text-2xl font-semibold ml-2">htmx works!</h2>
+    <button class="btn w-32" hx-get="{% url 'index' %}">OK</button>
 </div>
