Complete responsive navbar with styling

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,25 +2,5 @@
 {% load static %}
 
 {% block content %}
-    <div class="navbar bg-base-100">
-  <div class="flex-1">
-    <img class="w-72" src="{% static 'images/MZ_logo.png' %}" alt="MemberZone logo"/>
-  </div>
-  <div class="absolute top-1 right-1">
-    <ul class="menu menu-horizontal p-0">
-      <li tabindex="0">
-        <a>
-          Menu
-          <svg class="fill-current" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-              <path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"></path>
-          </svg>
-        </a>
-        <ul class="p-2 bg-base-100">
-          <li><a>Item 1</a></li>
-          <li><a>Item 2</a></li>
-        </ul>
-      </li>
-    </ul>
-  </div>
-</div>
+    {% include 'partials/navbar.html' %}
 {% endblock content %}
