Change button colours to blue

--- a/website/templates/partials/navbar.html
+++ b/website/templates/partials/navbar.html
@@ -14,7 +14,7 @@
     </ul>
   </div>
   <div class="navbar-end hidden lg:flex flex-1 ml-auto">
-    <a id="login-button" class="btn w-32 mr-2">Login</a>
+    <a id="login-button" class="btn border-0 bg-blue-600 w-24 mr-2">Login</a>
   </div>
   <div class="navbar-end lg:hidden">
     <div class="dropdown dropdown-end">
