--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -51,7 +51,7 @@
         Get reminders to cancel your free trials before they lapse!
       </p>
       <div class="mt-2 card-actions">
-        <button class="btn btn-primary">Get Started</button>
+        <button class="btn border-0 bg-blue-600">Get Started</button>
       </div>
     </div>
   </div>
