Swap utility class order in tag

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -50,7 +50,7 @@
         Keep track of all your memberships and subscriptions in one place.<br/>
         Get reminders to cancel your free trials before they lapse!
       </p>
-      <div class="mt-2 card-actions">
+      <div class="card-actions mt-2">
         <button class="btn border-0 bg-blue-600">Get Started</button>
       </div>
     </div>
