--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,27 +13,27 @@
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 </head>
 <body>
+  {% include 'partials/navbar.html' %}
+  <div>
+    {% block content %}
+    {% endblock %}
+  </div>
 
-    <div>
-        {% block content %}
-        {% endblock %}
-    </div>
+  <script>
+    document.body.addEventListener('htmx:configRequest', (event) => {
+      event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
+    })
 
-    <script>
-        document.body.addEventListener('htmx:configRequest', (event) => {
-            event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
-        })
-
-        htmx.onLoad(function(content) {
-            var sortables = content.querySelectorAll(".sortable");
-            for (var i = 0; i < sortables.length; i++) {
-              var sortable = sortables[i];
-              new Sortable(sortable, {
-                  animation: 150,
-                  ghostClass: 'blue-background-class'
-              });
-            }
-        })
-    </script>
+    htmx.onLoad(function(content) {
+      var sortables = content.querySelectorAll(".sortable");
+      for (var i = 0; i < sortables.length; i++) {
+        var sortable = sortables[i];
+        new Sortable(sortable, {
+          animation: 150,
+          ghostClass: 'blue-background-class'
+        });
+      }
+    })
+  </script>
 </body>
 </html>
