--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -3,14 +3,14 @@
 
 {% block content %}
   <div class="card items-center pt-8">
-    <table class="table table-fixed lg:w-1/2 w-full">
+    <table class="table table-fixed w-screen md:w-3/4 xl:w-1/2 w-full">
       <!-- head -->
       <thead>
         <tr>
           <th class="pl-2 text-left">Membership</th>
           <th class="p-0">Subscription</th>
           <th class="p-0">Renewal</th>
-          <th class="p-0 w-1/5">Cost</th>
+          <th class="p-0 w-16">Cost</th>
         </tr>
       </thead>
       <tbody class="flex-1 sm:flex-none">
