--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -3,28 +3,42 @@
 
 {% block content %}
     <div class="card items-center pt-8">
-      <h2 class="text-xl text-center w-3/4">Welcome to MemberZone, here are your memberships.</h2>
+      <h2 class="text-xl text-center w-3/4">Welcome to MemberZone! Here are your memberships.</h2>
       <div class="divider w-1/2 mx-auto"></div>
-      <table class="table table-fixed w-full lg:w-1/2">
-        <!-- head -->
-        <thead>
-          <tr>
-            <th scope="col" class="pl-2 text-left">Membership</th>
-            <th scope="col" class="p-0">Subscription</th>
-            <th scope="col" class="p-0 hidden sm:table-cell">Renewal</th>
-            <th scope="col" class="p-0 hidden sm:table-cell w-1/6">Cost</th>
-            <th scope="col" class="p-0 w-1/5 sm:w-1/6">Actions</th>
-          </tr>
-        </thead>
-        <tbody class="flex-1 sm:flex-none">
-          <tr>
-            <th class="pl-2 truncate text-left">Memb. name</th>
-            <td class="p-0">Sub. type</td>
-            <td class="p-0 hidden sm:table-cell">Renew date</td>
-            <td class="p-0 hidden sm:table-cell">Price</td>
-            <td class="p-0">Edit/Del.</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2 overflow-auto">
+        <table class="table table-fixed grow">
+          <thead>
+            <tr>
+              <th>Membership</th>
+              <th>Subscription</th>
+              <th>Renewal</th>
+              <th class="p-0 hidden sm:table-cell">Reminder</th>
+              <th class="hidden sm:table-cell">Cost</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th class="bg-white">Netflix</th>
+              <td>Monthly</td>
+              <td>12/07/2022</td>
+              <td class="hidden sm:table-cell items-center">
+                <input type="checkbox" id="reminder-check" class="checkbox"/>
+              </td>
+              <td class="hidden sm:table-cell">£14.99</td>
+            </tr>
+          </tbody>
+        </table>
+        <a href="#modal-form" class="mx-auto md:ml-2 btn btn-square bg-blue-600 border-0 basis-14">NEW</a>
+      </div>
     </div>
+
+<div class="modal" id="modal-form">
+  <div class="modal-box">
+    <h3 class="font-bold text-lg">New membership</h3>
+    <p class="py-4">Fill in the details of your subscription below</p>
+    <div class="modal-action">
+      <a href="#" class="btn">Save</a>
+    </div>
+  </div>
+</div>
 {% endblock %}
