--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -51,9 +51,9 @@
       </p>
       <div class="card-actions mt-2">
         {% if user.is_authenticated %}
-          <a href="{% url 'my-memberships' %}" class="btn border-0 bg-blue-600">Get Started</a>
+          <a href="{% url 'my-memberships' %}" class="btn border-0">Get Started</a>
         {% else %}
-          <a href="{% url 'login' %}" class="btn border-0 bg-blue-600">Get Started</a>
+          <a href="{% url 'login' %}" class="btn btn-primary border-0">Get Started</a>
         {% endif %}
       </div>
     </div>
