--- a/website/templates/partials/navbar.html
+++ b/website/templates/partials/navbar.html
@@ -17,7 +17,7 @@
     {% if user.is_authenticated %}
       <a id="login-button" href="{% url 'logout' %}" class="btn border-0 w-24 mr-2">Log out</a>
     {% else %}
-      <a id="login-button" href="{% url 'login' %}" class="btn border-0 bg-blue-600 w-24 mr-2">Log in</a>
+      <a id="login-button" href="{% url 'login' %}" class="btn border-0 w-24 mr-2">Log in</a>
     {% endif %}
   </div>
   <div class="navbar-end lg:hidden">
