--- a/website/templates/registration/password_reset.html
+++ b/website/templates/registration/password_reset.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         {{ password_reset_form|crispy }}
         <div class="card-actions mt-4">
-          <input class="btn" type="submit" name="submit" value="Reset password">
+          <input class="btn btn-primary" type="submit" name="submit" value="Reset password">
         </div>
       </form>
     </div>
