--- a/website/templates/registration/password_reset_complete.html
+++ b/website/templates/registration/password_reset_complete.html
@@ -8,7 +8,7 @@
     <div class="card h-full w-full rounded-xl border border-gray-600 border-solid place-items-center">
       <p class="p-4 text-center">Your password has been reset. You may log in now.</p>
       <div class="card-actions mb-4">
-        <a id="login-button" href="{% url 'login' %}" class="btn border-0 bg-blue-600 w-24 mr-2">Log in</a>
+        <a id="login-button" href="{% url 'login' %}" class="btn btn-primary border-0 w-24 mr-2">Log in</a>
       </div>
     </div>
   </div>
