--- a/website/templates/partials/modal-form.html
+++ b/website/templates/partials/modal-form.html
@@ -3,36 +3,48 @@
 {% load widget_tweaks %}
 {% load djmoney %}
 
-<div class="modal" id="modal-form">
-  <div class="modal-box p-4 scrollbar-thin">
-    <a href="#" class="btn btn-sm btn-circle absolute right-2 top-2">✕</a>
-    <h3 class="font-bold text-lg">New membership</h3>
-    <p class="pt-2 pb-4">Enter the details of your subscription below</p>
-    <form method="post">
-      {% csrf_token %}
-      <div class="grid grid-cols-2 gap-x-4 gap-y-0">
-        <div class="col-span-2">{{ form.membership_name|as_crispy_field }}</div>
-        <div class="col-span-2">{{ form.website_link|as_crispy_field }}</div>
-        <div class="col-span-2">{{ form.membership_number|as_crispy_field }}</div>
-        <div>{{ form.membership_type|as_crispy_field }}</div>
-        <div>{{ form.renewal_date|as_crispy_field }}</div>
-        <div>{{ form.custom_period|as_crispy_field }}</div>
-        <div>{{ form.custom_unit|as_crispy_field }}</div>
-        <div>{{ form.minimum_term|as_crispy_field }}</div>
-        <div>{{ form.free_trial_expiry|as_crispy_field }}</div>
-        <div class="grid grid-flow-row auto-rows-auto">
-          <div>
-            {% render_field form.reminder|add_label_class:"font-bold text-sm" %}
-          </div>
-          <div>
-            {% render_field form.reminder|add_class:"checkbox checkbox-lg checkbox-primary border-gray-400 my-2" %}
-          </div>
+<div class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
+  <label for="modal-form" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+  <h3 class="font-bold text-lg">New membership</h3>
+  {% if form.non_field_errors %}
+    <div class="mt-2">
+      {{ form|as_crispy_errors }}
+    </div>
+  {% else %}
+    {% if valid %}
+      <div class="alert my-2">
+        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
+          <span class="block inline">New membership added successfully!</span>
         </div>
-        <div class="col-span-2">{{ form.cost|as_crispy_field }}</div>
       </div>
-      <div>
-        <button type="submit" class="btn btn-primary border-none">Save</button>
+    {% else %}
+      <p class="pt-2 pb-4">Enter the details of your subscription below</p>
+    {% endif %}
+  {% endif %}
+  <form hx-post="{{ request.path }}">
+    {% csrf_token %}
+    <div class="grid grid-cols-2 gap-x-4 gap-y-0">
+      <div class="col-span-2">{{ form.membership_name|as_crispy_field }}</div>
+      <div class="col-span-2">{{ form.website_link|as_crispy_field }}</div>
+      <div class="col-span-2">{{ form.membership_number|as_crispy_field }}</div>
+      <div>{{ form.membership_type|as_crispy_field }}</div>
+      <div>{{ form.renewal_date|as_crispy_field }}</div>
+      <div>{{ form.custom_period|as_crispy_field }}</div>
+      <div>{{ form.custom_unit|as_crispy_field }}</div>
+      <div>{{ form.minimum_term|as_crispy_field }}</div>
+      <div>{{ form.free_trial_expiry|as_crispy_field }}</div>
+      <div class="grid grid-flow-row auto-rows-auto">
+        <div>
+          {% render_field form.reminder|add_label_class:"font-bold text-sm" %}
+        </div>
+        <div>
+          {% render_field form.reminder|add_class:"checkbox checkbox-lg checkbox-primary border-gray-400 my-2" %}
+        </div>
       </div>
-    </form>
-  </div>
+      <div class="col-span-2">{{ form.cost|as_crispy_field }}</div>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary border-none">Save</button>
+    </div>
+  </form>
 </div>
