--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,6 +11,7 @@
     <!-- HTMX -->
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.5"></script>
 </head>
 <body>
   {% include 'partials/navbar.html' %}
