--- a/website/templates/partials/modal-form.html
+++ b/website/templates/partials/modal-form.html
@@ -3,25 +3,28 @@
 {% load widget_tweaks %}
 {% load djmoney %}
 
-<div class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
-  <label for="modal-form" class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
+<div id="modal-box" class="modal-box p-4 scrollbar-thin" hx-target="this" hx-swap="outerHTML">
+  {% if success %}
+    <script type="text/hyperscript">
+      on htmx:load
+        remove .modal-open from #modal
+        then
+          show #alert-success
+          wait 3s
+          hide #alert-success
+      end
+    </script>
+  {% endif %}
+  <button _="on click remove .modal-open from #modal" class="btn btn-sm btn-circle absolute right-2 top-2">✕</button>
   <h3 class="font-bold text-lg">New membership</h3>
   {% if form.non_field_errors %}
     <div class="mt-2">
       {{ form|as_crispy_errors }}
     </div>
   {% else %}
-    {% if valid %}
-      <div class="alert my-2">
-        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative" role="alert">
-          <span class="block inline">New membership added successfully!</span>
-        </div>
-      </div>
-    {% else %}
-      <p class="pt-2 pb-4">Enter the details of your subscription below</p>
-    {% endif %}
+    <p class="pt-2 pb-4">Enter the details of your subscription below</p>
   {% endif %}
-  <form hx-post="{{ request.path }}">
+  <form id="my-form" hx-post="{{ request.path }}">
     {% csrf_token %}
     <div class="grid grid-cols-2 gap-x-4 gap-y-0">
       <div class="col-span-2">{{ form.membership_name|as_crispy_field }}</div>
