Improve styling of form and table

--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -14,14 +14,14 @@
            role="alert" style="display: none">
         <span class="block inline">New membership added successfully!</span>
       </div>
-      <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2 overflow-auto">
+      <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2">
         <table class="table table-fixed grow">
-          <thead>
-            <tr>
+          <thead class="w-auto">
+            <tr class="text-left flex-1">
               <th>Membership</th>
               <th>Subscription</th>
               <th>Renewal</th>
-              <th class="p-0 hidden sm:table-cell">Reminders</th>
+              <th class="px-0 hidden sm:table-cell">Reminders</th>
               <th class="hidden sm:table-cell">Cost</th>
             </tr>
           </thead>
