--- a/website/templates/partials/membership-table.html
+++ b/website/templates/partials/membership-table.html
@@ -1,12 +1,18 @@
 {% for membership in object_list %}
-  <tr>
-    <th class="bg-white">{{ membership.membership_name }}</th>
+  <tr class="h-auto">
+    <th class="bg-white dropdown dropdown-right dropdown-end mt-1 -mb-1">
+      <label tabindex="0"><a class="cursor-pointer">{{ membership.membership_name }}</a></label>
+      <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-24">
+        <li><a>Edit</a></li>
+        <li><a>Delete</a></li>
+      </ul>
+    </th>
     <td>{{ membership.membership_type|title }}</td>
     <td>{{ membership.renewal_date }}</td>
     <td class="hidden sm:table-cell items-center">
       <input type="checkbox"
              id="reminder-check"
-             class="checkbox checkbox-primary border-none"
+             class="checkbox checkbox-primary border-none mt-0.5"
              {% if membership.reminder %}checked{% endif %}
              disabled
       />
