--- a/website/templates/memberships.html
+++ b/website/templates/memberships.html
@@ -9,10 +9,18 @@
     <div class="card items-center pt-8">
       <h2 class="text-xl text-center w-3/4">Welcome to MemberZone! Here are your memberships.</h2>
       <div class="divider w-1/2 mx-auto"></div>
+      <script type="text/hyperscript">
+        on membershipsChanged
+          remove .modal-open from #modal
+          show #alert-success
+          wait 3s
+          hide #alert-success
+        end
+      </script>
       <div id="alert-success"
            class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-2 -mt-2 w-auto mx-auto"
            role="alert" style="display: none">
-        <span class="block inline">New membership added successfully!</span>
+        <span class="block inline">Memberships updated successfully!</span>
       </div>
       <div class="flex flex-row w-screen md:w-3/4 xl:w-1/2">
         <table class="table table-fixed grow">
