Clean up tailwind and other js package inclusion

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,7 +9,7 @@
     <!-- Custom CSS -->
     {% tailwind_css %}
     <!-- HTMX -->
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+    <script src="https://unpkg.com/htmx.org@1.7.0" integrity="sha384-EzBXYPt0/T6gxNp0nuPtLkmRpmDBbjg6WmCUZRLXBBwYYmwAUxzlSGej0ARHX0Bo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="https://unpkg.com/hyperscript.org@0.9.5"></script>
 </head>
