--- a/website/templates/partials/membership-table.html
+++ b/website/templates/partials/membership-table.html
@@ -4,7 +4,13 @@
       <label tabindex="0"><a class="link cursor-pointer">{{ membership.membership_name }}</a></label>
       <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-24">
         <li><a>Edit</a></li>
-        <li><a>Delete</a></li>
+        <li>
+          <a hx-post="{% url 'delete-membership' membership.pk %}"
+             hx-confirm="Are you sure you want to delete the membership '{{ membership.membership_name }}'?"
+             hx-target="closest tr" hx-swap="delete">
+            Delete
+          </a>
+        </li>
       </ul>
     </th>
     <td>{{ membership.membership_type|title }}</td>
